--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>Calculadora de Folhas A4</h1>
         
         <label for="blocos">Número de Blocos:</label>
-        <input type="number" id="blocos" value="100">
+        <input type="number" id="blocos" value="">
 
         <label for="folhasPorBloco">Número de Folhas por Bloco:</label>
-        <input type="number" id="folhasPorBloco" value="100">
+        <input type="number" id="folhasPorBloco" value="">
 
         <label for="folhasPorA4">Número de Folhas por A4:</label>
-        <input type="number" id="folhasPorA4" value="8">
+        <input type="number" id="folhasPorA4" value="">
 
         <button onclick="calcularFolhasA4()">Calcular</button>
 
