--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body class="light-theme">
     <div class="theme-toggle">
         <button id="themeToggle" aria-label="Alternar tema">
-            <i class="fas fa-sun"></i>
-            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i> <!-- Ícone do sol para o tema claro -->
+            <i class="fas fa-moon"></i> <!-- Ícone da lua para o tema escuro -->
+            <i class="fas fa-circle"></i> <!-- Ícone para o tema preto e branco (pode ser alterado) -->
         </button>
     </div>
     <div class="container">
